k8s/restic/caddy-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restic-proxy
  labels:
    app: restic-proxy
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: restic-proxy
  template:
    metadata:
      name: restic-proxy
      labels:
        app: restic-proxy
    spec:
      containers:
        - name: restic-proxy
          image: caddy:2.8.4
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              protocol: TCP
              name: http
          volumeMounts:
            - mountPath: /etc/caddy
              name: caddy
      restartPolicy: Always
      volumes:
        - name: caddy
          configMap:
            name: caddy-config
---
apiVersion: v1
kind: Service
metadata:
  name: restic-proxy
spec:
  selector:
    app: restic-proxy
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
  type: ClusterIP
