k8s/restic/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: restic
spec:
  selector:
    app: restic
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
