k8s/restic/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: restic
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`restic.anshulg.com`)
      middlewares:
        - name: security-headers
          namespace: traefik
        - name: passtlsclientcert
      services:
        - name: restic-proxy
          port: 80
  tls:
    secretName: restic-cert-tls
    domains:
      - main: restic.anshulg.com
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: passtlsclientcert
spec:
  passTLSClientCert:
    pem: false
    info:
      subject:
        commonName: true
